# perturb-jepa-bridge

./: .gitignore  AGENTS.md  CODEX_CHAT_SUMMARY.md  CODEX_RESUME_HANDOFF.md  F082_EXTERNAL_VALIDATION_INSTRUCTIONS.md  MODEL_CARD.md  README.md  README_REAL_BENCHMARK.md  REPORTS_INDEX.md  SYNTHETIC_PASS_SUMMARY.md  pyproject.toml
configs/: bridge_train.yaml  counterfactual_train.yaml  eval_counterfactual.yaml  eval_retrieval.yaml  finetune.yaml  lincs_l1000_cellpainting.yaml  pretrain_image.yaml  pretrain_rna.yaml  real_sciplex3_bfmoa.yaml  scgenescope_round1_train_val.yaml
data/: download_manifest.json
docs/: feature_level_forecaster_validation_plan.md  paired_datasets.md  public_datasets.md
metrics/: REPORT.md  compound_intersection.csv
notebooks/: perturb_jepa_colab_end_to_end.ipynb
perturb_jepa/: __init__.py  config.py  distribution_losses.py  losses.py
prompt/: Perturb_JEPA_autoresearch_low_compute.md  autoresearch_norman_v1.md  bioflow_jepa_phase4_delta_operator_prompt.md  bioguard_jepa_phase7_safe_residual_prompt.md  bioguard_wm_jepa_phase8_v2_after_phase7_prompt.md  biomech_jepa_phase3_amendment_prompt.md  biooperator_jepa_phase5_contract_prompt.md  biospectral_jepa_phase6_rank_preserving_prompt.md  biotech_jepa_phase2_amendment_prompt.md  codex_novel_bioaction_jepa_autoresearch_prompt.md  total_autonomy_autoresearch_bioguard_wm_jepa_prompt.md
reports/: real_benchmark_report.md  scgenescope_round1_train_val_report.md
results/: reproducibility_manifest.json
scripts/: __init__.py  audit_action_descriptors.py  audit_biotech_image_branch.py  audit_biotech_transition_targets.py  audit_condition_batch_design.py  audit_cpg0003_rosetta_source_geometry.py  audit_f082_scgenescope_failure_modes.py  build_bf_moa_manifest.py  build_image_manifest.py  build_paired_manifest.py  build_rna_manifest.py  cache_bioflow_teacher_latents.py  continue_synthetic_lite_to_100.py  diagnose_encoder_projection_mode.py  diagnose_program_counterfactual_readout.py  diagnose_pseudobulk_whitening_probe.py  diagnose_synthetic_lite_objectives.py  diagnose_synthetic_split_geometry.py  download_public_data.py  evaluate_bioaction_jepa.py  evaluate_bioflow_jepa.py  evaluate_bioguard_wm_jepa.py  evaluate_biomech_jepa.py  evaluate_biooperator_jepa.py  evaluate_biospectral_jepa.py  evaluate_biotech_jepa.py  evaluate_counterfactual.py  evaluate_expression_baselines.py  evaluate_prefit_pls_readout.py  evaluate_real_benchmark.py  evaluate_retrieval.py  evaluate_retrieval_baselines.py  prepare_lincs_pairing.py  prepare_real_pairing.py  prepare_scgenescope_pairing.py  run_bioguard_phase7_reproduction.py  run_bioguard_residual_selection.py  run_bioguard_wm_phase8_v2.py  run_bioguard_wm_total_autonomy.py  run_biological_validation.py  (+38 more)
tests/: test_action_adaln_predictor.py  test_action_descriptors.py  test_bag_aggregator.py  test_batch_adversary.py  test_bioaction_condition_pairs.py  test_bioaction_eval_split.py  test_bioaction_jepa_losses.py  test_bioaction_jepa_model.py  test_bioflow_identity.py  test_bioflow_source_improvement.py  test_bioflow_vector_field.py  test_bioguard_rollout_contracts.py  test_bioguard_splits.py  test_bioguard_wm_calibration.py  test_bioguard_wm_context_contract.py  test_bioguard_wm_identity.py  test_bioguard_wm_no_leakage.py  test_biology_validation.py  test_biomech_jepa_model.py  test_biomech_transition_targets.py  test_biooperator_contracts.py  test_biooperator_losses.py  test_biospectral_jepa_identity.py  test_biospectral_no_leakage.py  test_biospectral_operator_contracts.py  test_biotech_batch_audit.py  test_biotech_jepa_model.py  test_cell_jepa_rna_warmstart.py  test_condition_bag_dataset.py  test_counterfactual_module.py  test_data_ingestion.py  test_delta_whitening.py  test_distribution_losses.py  test_encoder_pooling.py  test_evaluation_baselines.py  test_evaluation_reporting.py  test_evaluation_scripts.py  test_family_m_transport_baselines.py  test_family_n_distillation.py  (+34 more)
(+2391 files in other folders)
