[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perturb-jepa-bridge"
version = "0.1.0"
description = "Unpaired scRNA-seq and brightfield perturbation modeling scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "requests>=2.31",
  "rich>=13.0",
  "scipy>=1.10",
  "torch>=2.1",
  "tqdm>=4.66",
]

[project.optional-dependencies]
data = [
  "anndata>=0.10",
  "h5py>=3.10",
  "pyarrow>=14.0",
  "scanpy>=1.9",
  "zarr>=2.16",
]
training = [
  "torchvision>=0.16",
  "scikit-learn>=1.3",
]
evaluation = [
  "matplotlib>=3.8",
  "scikit-learn>=1.3",
]
image = [
  "pillow>=10.0",
  "torchvision>=0.16",
]
spatial = [
  "squidpy>=1.3",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
perturb-jepa-download = "scripts.download_public_data:main"
perturb-jepa-build-bf-moa = "scripts.build_bf_moa_manifest:main"
perturb-jepa-build-rna-manifest = "scripts.build_rna_manifest:main"
perturb-jepa-build-image-manifest = "scripts.build_image_manifest:main"
perturb-jepa-build-paired-manifest = "scripts.build_paired_manifest:main"
perturb-jepa-prepare-scgenescope = "scripts.prepare_scgenescope_pairing:main"
perturb-jepa-smoke-train = "scripts.train_smoke:main"
perturb-jepa-train-synthetic = "scripts.train_synthetic:main"
perturb-jepa-train-pretrain-rna = "scripts.train_pretrain_rna:main"
perturb-jepa-train-pretrain-image = "scripts.train_pretrain_image:main"
perturb-jepa-train-bridge = "scripts.train_bridge:main"
perturb-jepa-train-counterfactual = "scripts.train_counterfactual:main"
perturb-jepa-train-finetune = "scripts.train_finetune:main"
perturb-jepa-eval-expression = "scripts.evaluate_expression_baselines:main"
perturb-jepa-eval-retrieval = "scripts.evaluate_retrieval_baselines:main"
perturb-jepa-eval-learned-retrieval = "scripts.evaluate_retrieval:main"
perturb-jepa-eval-counterfactual = "scripts.evaluate_counterfactual:main"
perturb-jepa-eval-real-benchmark = "scripts.evaluate_real_benchmark:main"
perturb-jepa-biology-validation = "scripts.run_biological_validation:main"
perturb-jepa-audit-condition-batch = "scripts.audit_condition_batch_design:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.setuptools]
packages = [
  "perturb_jepa",
  "perturb_jepa.data",
  "perturb_jepa.models",
  "perturb_jepa.training",
  "perturb_jepa.evaluation",
  "perturb_jepa.baselines",
  "scripts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E402", "E501", "F401", "B007"]
